pages/menu/[id].jsx/.boxのbackground-colorをred

--- a/styles/[id].module.css
+++ b/styles/[id].module.css
@@ -52,6 +52,7 @@
   align-items: center;
   z-index: 1;
   background-color: white;
+  background-color: red;
   box-shadow: 5px 5px 10px gray;
   border-radius: 10px;
   padding: 1rem;
@@ -175,6 +176,7 @@
   align-items: center;
   z-index: 1;
   background-color: white;
+  background-color: red;
   box-shadow: 5px 5px 10px gray;
   border-radius: 10px;
   padding: 1rem;
@@ -298,6 +300,7 @@
   align-items: center;
   z-index: 1;
   background-color: white;
+  background-color: red;
   box-shadow: 5px 5px 10px gray;
   border-radius: 10px;
   padding: 1rem;
