--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -14,7 +14,7 @@
   padding: 2rem;
   @include center;
   flex-direction: column;
-
+  
   &::after {
     content: "";
     background-color: rgba(0, 0, 0, 0.5);
@@ -30,6 +30,7 @@
     @include center;
     z-index: 1;
     background-color: white;
+    background-color: red;
     box-shadow: 5px 5px 10px gray;
     border-radius: 10px;
     padding: 1rem;
