--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -30,7 +30,7 @@
     @include center;
     z-index: 1;
     background-color: white;
-    background-color: red;
+    // background-color: red;
     box-shadow: 5px 5px 10px gray;
     border-radius: 10px;
     padding: 1rem;
