pages/menu/[id].module.scss/footerとbutton

--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -14,7 +14,7 @@
   padding: 2rem;
   @include center;
   flex-direction: column;
-  
+
   &::after {
     content: "";
     background-color: rgba(0, 0, 0, 0.5);
@@ -188,6 +188,9 @@
     p {
       margin: 0;
       color: black;
+      color: white;
+      font-size: 1em;
+      font-size: 0.9em;
     }
   }
 }
@@ -277,6 +280,16 @@
         .image {
           height: 200px;
         }
+      }
+    }
+
+    footer {
+      height: 50px;
+      height: 40px;
+
+      p {
+        font-size: 1em;
+        font-size: 0.9em;
       }
     }
   }
@@ -385,6 +398,20 @@
         .image {
           height: 180px;
         }
+      }
+
+      .buttonBox {
+        margin: 2rem 0 1rem;
+        a {
+          padding: 0.7rem 1.7rem;
+        }
+      }
+    }
+    footer {
+      height: 40px;
+
+      p {
+        font-size: 0.8em;
       }
     }
   }
