--- a/styles/[id].module.css
+++ b/styles/[id].module.css
@@ -402,6 +402,9 @@
 .body footer p {
   margin: 0;
   color: black;
+  color: white;
+  font-size: 1em;
+  font-size: 0.9em;
 }
 
 @media screen and (min-width: 1500px) {
@@ -477,6 +480,14 @@
 .body .bottleMain .box .image,
 .body .cocktailMain .box .image {
     height: 200px;
+  }
+  .body footer {
+    height: 50px;
+    height: 40px;
+  }
+  .body footer p {
+    font-size: 1em;
+    font-size: 0.9em;
   }
 }
 @media screen and (max-width: 600px) {
@@ -558,6 +569,22 @@
 .body .bottleMain .box .image,
 .body .cocktailMain .box .image {
     height: 180px;
+  }
+  .body .barrelMain .buttonBox,
+.body .bottleMain .buttonBox,
+.body .cocktailMain .buttonBox {
+    margin: 2rem 0 1rem;
+  }
+  .body .barrelMain .buttonBox a,
+.body .bottleMain .buttonBox a,
+.body .cocktailMain .buttonBox a {
+    padding: 0.7rem 1.7rem;
+  }
+  .body footer {
+    height: 40px;
+  }
+  .body footer p {
+    font-size: 0.8em;
   }
 }
 @media screen and (max-width: 400px) {
